# autorally

./: .gitignore
autorally_control/: CMakeLists.txt
autorally_control/cfg/: OmniWheelRobotPathIntegralParams.cfg
autorally_control/include/autorally_control/path_integral/: generalized_linear.cu  generalized_linear.cuh  mppi_controller.cu  mppi_controller.cuh  omni_wheel_robot_autorally_model.cu  omni_wheel_robot_autorally_model.cuh  omni_wheel_robot_costs.cu  omni_wheel_robot_costs.cuh  omni_wheel_robot_model.cu  omni_wheel_robot_model.cuh  omni_wheel_robot_plant.h  omni_wheel_robot_run_control_loop.cuh  param_getter.h  vector_math.cuh
autorally_control/launch/: path_integral_omni_wheel_robot.launch
autorally_control/src/path_integral/: CMakeLists.txt  omni_wheel_robot_plant.cpp  param_getter.cpp  path_integral_main.cu  path_integral_omni_wheel_robot_main.cu
autorally_control/test/: omni_wheel_robot_model_test.cpp  vector_math_test.cpp
autorally_msgs/: CMakeLists.txt
autorally_msgs/msg/: chassisCommand.msg  wheelCommands.msg
